# spotlightcurve

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
spotlightcurve/: __init__.py  cli.py  core.py  io.py  model.py  preprocess.py
