[metadata]
name = spotlightcurve
version = 0.0.1
description = Minimal tools to fetch, preprocess, and analyze exoplanet transits (TESS/Kepler) & starspots.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Arif Solmaz
keywords = exoplanet, transit, TESS, Kepler, light curve, BLS, starspots
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
project_urls =
    Source = https://github.com/ArifSolmaz/spotlightcurve

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy<2
    pandas
    matplotlib
    astropy>=5,<6
    lightkurve>=2.4.1,<2.6
    astroquery
    batman-package

[options.packages.find]
where = .
include = spotlightcurve*

[options.entry_points]
console_scripts =
    spotlightcurve-download = spotlightcurve.cli:download_main
    spotlightcurve-bls = spotlightcurve.cli:bls_main